edition = "2023";

package wayplatform.connect.tachograph.dd.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/dd/v1/generation.proto";
import "wayplatform/connect/tachograph/dd/v1/vehicle_registration_identification.proto";

// Represents information about the previous vehicle used by a driver (Generation 2 format).
//
// This is the Gen2-specific version with VU generation information.
// For Gen1 format (without VU generation), see PreviousVehicleInfo.
//
// This message is used in VU downloads (VuCardIWRecord) to track the vehicle
// a driver was using before inserting their card into the current vehicle.
//
// Binary Layout: 20 bytes (fixed for Gen2)
//   - vehicleRegistrationIdentification: 15 bytes (1 nation + 14 registration)
//   - cardWithdrawalTime: 4 bytes
//   - vuGeneration: 1 byte
//
// See Data Dictionary, Section 2.118, `PreviousVehicleInfo`.
//
// ASN.1 Definition (Gen2):
//
//     PreviousVehicleInfo ::= SEQUENCE {
//         vehicleRegistrationIdentification VehicleRegistrationIdentification,
//         cardWithdrawalTime                TimeReal,
//         vuGeneration                      Generation
//     }
message PreviousVehicleInfoG2 {
  // The registration of the previous vehicle.
  //
  // See Data Dictionary, Section 2.166, `VehicleRegistrationIdentification`.
  VehicleRegistrationIdentification vehicle_registration = 1;

  // The time the card was withdrawn from the previous vehicle.
  //
  // See Data Dictionary, Section 2.162, `TimeReal`.
  google.protobuf.Timestamp card_withdrawal_time = 2;

  // The generation of the VU from which the card was withdrawn.
  //
  // This field is mandatory in Gen2 format and indicates whether the previous
  // VU was a Generation 1 or Generation 2 vehicle unit.
  //
  // See Data Dictionary, Section 2.75, `Generation`.
  Generation vu_generation = 3;

  // Original encoded bytes from the binary format.
  //
  // When present, this is used as a canvas for the "raw data painting" strategy
  // during marshalling to preserve reserved bits and unknown data.
  //
  // Size: 20 bytes (fixed for Gen2).
  bytes raw_data = 4;
}
